# AnalyticsBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_init.sql  002_indexes.sql  create_db.sh  load_json.py
src/: main.py
src/db/: __init__.py
src/handlers/: __init__.py
src/llm/: __init__.py  build_sql_and_params.py  prompt.py
src/llm/functions/: __init__.py  advanced.py  base.py  engagement.py  video_creator.py  video_general.py  views_dynamics.py
src/utils/: config.py  logger.py
